- code cleaned up - README.md added

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -27,21 +27,21 @@
             style="@style/Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/overlap_error"
             android:gravity="center"
             android:text="@string/mobile_academy_2021"
             android:textSize="@dimen/large_text"
-            app:layout_constraintTop_toBottomOf="@+id/etneteraIcon"
-            android:layout_marginTop="@dimen/overlap_error"/>
+            app:layout_constraintTop_toBottomOf="@+id/etneteraIcon" />
 
         <EditText
             android:id="@+id/inputUserName"
-            android:layout_width="250dp"
+            android:layout_width="@dimen/credentialsInput"
             android:layout_height="@dimen/square_icon_medium"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/spacing_XXL"
             android:layout_marginBottom="@dimen/spacing_small"
             android:autofillHints="@string/hint_username"
-            android:background="#11000000"
+            android:background="@color/grey_light_x"
             android:drawableStart="@drawable/ic_action_user"
             android:drawablePadding="@dimen/spacing_small"
             android:ems="10"
@@ -60,7 +60,7 @@
             android:layout_below="@id/inputUserName"
             android:layout_marginTop="@dimen/spacing_small"
             android:autofillHints="@string/hint_password"
-            android:background="#11000000"
+            android:background="@color/grey_light_x"
             android:drawableStart="@drawable/ic_action_lock"
             android:drawablePadding="@dimen/spacing_small"
             android:ems="10"
@@ -78,7 +78,7 @@
             android:layout_height="@dimen/square_icon_medium"
             android:layout_marginTop="@dimen/spacing_XXL"
             android:background="@drawable/button"
-            android:elevation="10dp"
+            android:elevation="@dimen/spacing_small"
             android:text="@string/login_button"
             android:textColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
