--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <!-- error handling text overlap -->
     <dimen name="overlap_error">-150dp</dimen>
     <dimen name="spacing_XXL">60dp</dimen>
+    <dimen name="credentialsInput">250dp</dimen>
 </resources>
