--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -21,6 +21,7 @@
         android:orientation="vertical">
 
         <include
+            android:id="@+id/includeLayout"
             layout="@layout/user_filter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
