--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_userProfileFragment_to_errorPageFragment2"
             app:destination="@id/errorPageFragment2" />
+        <action
+            android:id="@+id/action_userProfileFragment_to_editFragment"
+            app:destination="@id/editFragment" />
     </fragment>
     <fragment
         android:id="@+id/errorPageFragment2"
@@ -36,6 +39,17 @@
         <action
             android:id="@+id/action_errorPageFragment2_to_userListFragment"
             app:destination="@id/userListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editFragment"
+        android:name="com.example.emaapp.view.EditFragment"
+        android:label="EditFragment" >
+        <action
+            android:id="@+id/action_editFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
+        <action
+            android:id="@+id/action_editFragment_to_errorPageFragment2"
+            app:destination="@id/errorPageFragment2" />
     </fragment>
 
     <!-- Error page fragment -->
