--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,15 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="EditButton">
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textSize">@dimen/medium_text</item>
+        <item name="android:textStyle">normal</item>
+        <item name="textAllCaps">true</item>
+        <item name= "android:layout_margin">5dp</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
+    </style>
+
     <!--Toggle button styles-->
     <style name="ToggleButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:paddingLeft">@dimen/spacing_small</item>
