- editing of skills working (user is returned to UserListFragment after submitting the changes)

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,6 +50,9 @@
         <action
             android:id="@+id/action_editFragment_to_errorPageFragment2"
             app:destination="@id/errorPageFragment2" />
+        <action
+            android:id="@+id/action_editFragment_to_userListFragment"
+            app:destination="@id/userListFragment" />
     </fragment>
 
     <!-- Error page fragment -->
