--- a/app/src/main/res/layout/layout_row.xml
+++ b/app/src/main/res/layout/layout_row.xml
@@ -2,9 +2,9 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/spacing_Xsmall">
 
     <RelativeLayout
@@ -18,7 +18,7 @@
             android:layout_height="@dimen/square_icon_medium"
             android:contentDescription="@string/user_icon"
             app:shapeAppearanceOverlay="@style/CircleImageView"
-            tools:srcCompat="@drawable/loading_icon"/>
+            tools:srcCompat="@drawable/loading_icon" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/list_platform_id"
@@ -27,13 +27,13 @@
             android:layout_below="@+id/list_user_icon"
             android:layout_marginStart="-15dp"
             android:layout_marginTop="-15dp"
-            app:strokeColor="@color/white"
-            app:strokeWidth="1dp"
             android:layout_toEndOf="@id/list_user_icon"
+            android:background="@color/white"
             android:contentDescription="@string/platform_android"
             android:tint="@color/teal_700"
-            android:background="@color/white"
             app:shapeAppearanceOverlay="@style/CircleImageView"
+            app:strokeColor="@color/white"
+            app:strokeWidth="1dp"
             tools:srcCompat="@drawable/ic_android" />
 
         <TextView
@@ -42,63 +42,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_medium"
-            android:layout_toEndOf="@id/list_platform_id"/>
+            android:layout_toEndOf="@id/list_platform_id" />
 
         <LinearLayout
-            android:layout_below="@id/list_user_name"
-            android:layout_toEndOf="@id/list_user_icon"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/list_user_name"
             android:layout_marginStart="@dimen/spacing_medium"
-            android:layout_marginTop="@dimen/spacing_Xsmall">
+            android:layout_marginTop="@dimen/spacing_Xsmall"
+            android:layout_toEndOf="@id/list_user_icon">
 
-         <!-- homework 1 -->
-    <ImageView
-        android:id="@+id/list_hw1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_one"
-        android:contentDescription="@string/home_works" />
+            <!-- homework 1 -->
+            <ImageView
+                android:id="@+id/list_hw1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/home_works"
+                tools:src="@drawable/ic_one" />
 
-    <!-- homework 2 -->
-    <ImageView
-        android:id="@+id/list_hw2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_two"
-        android:contentDescription="@string/home_works" />
+            <!-- homework 2 -->
+            <ImageView
+                android:id="@+id/list_hw2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/home_works"
+                tools:src="@drawable/ic_two" />
 
-    <!-- homework 3 -->
-    <ImageView
-        android:id="@+id/list_hw3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_three"
-        android:contentDescription="@string/home_works" />
+            <!-- homework 3 -->
+            <ImageView
+                android:id="@+id/list_hw3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/home_works"
+                tools:src="@drawable/ic_three" />
 
-    <!-- homework 4 -->
-    <ImageView
-        android:id="@+id/list_hw4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_four"
-        android:contentDescription="@string/home_works"/>
+            <!-- homework 4 -->
+            <ImageView
+                android:id="@+id/list_hw4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/home_works"
+                tools:src="@drawable/ic_four" />
 
-    <!-- homework 5 -->
-    <ImageView
-        android:id="@+id/list_hw5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_five"
-        android:contentDescription="@string/home_works" />
+            <!-- homework 5 -->
+            <ImageView
+                android:id="@+id/list_hw5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/home_works"
+                tools:src="@drawable/ic_five" />
 
-    <!-- homework 6 -->
-    <ImageView
-        android:id="@+id/list_hw6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_six"
-        android:contentDescription="@string/home_works" />
+            <!-- homework 6 -->
+            <ImageView
+                android:id="@+id/list_hw6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/home_works"
+                tools:src="@drawable/ic_six" />
 
         </LinearLayout>
     </RelativeLayout>
