--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -36,12 +36,13 @@
         <EditText
             android:id="@+id/inputUserName"
             android:layout_width="@dimen/credentialsInput"
-            android:layout_height="@dimen/square_icon_small"
+            android:layout_height="@dimen/square_icon_medium"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/spacing_XXL"
             android:layout_marginBottom="@dimen/spacing_small"
             android:autofillHints="@string/hint_username"
-            android:background="@color/grey_light_x"
+            android:background="@drawable/border_homeworks"
+            android:backgroundTint="@color/grey_light_x"
             android:drawableStart="@drawable/ic_action_user"
             android:drawablePadding="@dimen/spacing_small"
             android:ems="10"
@@ -56,11 +57,12 @@
         <EditText
             android:id="@+id/inputPassword"
             android:layout_width="250dp"
-            android:layout_height="@dimen/square_icon_small"
+            android:layout_height="@dimen/square_icon_medium"
             android:layout_below="@id/inputUserName"
             android:layout_marginTop="@dimen/spacing_small"
             android:autofillHints="@string/hint_password"
-            android:background="@color/grey_light_x"
+            android:background="@drawable/border_homeworks"
+            android:backgroundTint="@color/grey_light_x"
             android:drawableStart="@drawable/ic_action_lock"
             android:drawablePadding="@dimen/spacing_small"
             android:ems="10"
@@ -83,6 +85,26 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+
+        <ImageView
+            android:layout_width="@dimen/xxl_square_icon"
+            android:layout_height="@dimen/xl_square_icon"
+            android:contentDescription="@string/arrow"
+            android:rotation="@integer/config_navAnimTime"
+            android:src="@drawable/ic_arrow"
+            app:layout_constraintEnd_toStartOf="@id/loginButton"
+            app:layout_constraintTop_toBottomOf="@id/inputPassword"
+            app:tint="@color/grey" />
+
+        <ImageView
+            android:layout_width="@dimen/xxl_square_icon"
+            android:layout_height="@dimen/xl_square_icon"
+            android:contentDescription="@string/arrow"
+            android:rotation="30"
+            android:src="@drawable/ic_arrow"
+            app:layout_constraintStart_toEndOf="@id/loginButton"
+            app:layout_constraintTop_toBottomOf="@id/loginButton"
+            app:tint="@color/grey" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
