--- a/app/src/main/res/layout-land/error_page.xml
+++ b/app/src/main/res/layout-land/error_page.xml
@@ -20,7 +20,7 @@
             app:layout_constraintBottom_toTopOf="@+id/errorTitle"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@drawable/error_robot" />
+            android:src="@drawable/ic_robot_no_background"/>
 
         <TextView
             android:id="@+id/errorTitle"
