--- a/app/src/main/res/layout-land/fragment_user_profile.xml
+++ b/app/src/main/res/layout-land/fragment_user_profile.xml
@@ -107,10 +107,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:paddingTop="@dimen/spacing_small"
                     android:id="@+id/relativeLayout7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
